# cam2web

src/core/: CMakeLists.txt  XWebServer.cpp  XWebServer.hpp
